err.log
In file included from ./src/display.c:4:0:
./include/base.h:133:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/display.c:4:0:
./include/base.h:134:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:16,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/display.c: In function 'update_texture':
./src/display.c:60:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(!texture || !renderer || !full_texture || !frame_yuv)
     ^~
./src/display.c:62:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  if(loss_flag)
  ^~
./src/display.c: In function 'send_control':
./src/display.c:181:2: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
  set_request_head(control_display->req, 0x03, data_len);
  ^~~~~~~~~~~~~~~~
./src/display.c:182:33: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
  control_display->req->data_buf = buf;
                                 ^
./src/display.c: In function 'event_loop':
./src/display.c:201:6: warning: implicit declaration of function 'switch_mode' [-Wimplicit-function-declaration]
      switch_mode(0);
      ^~~~~~~~~~~
./src/display.c: In function 'control_msg':
./src/display.c:299:90: error: 'vids_heigth' undeclared (first use in this function)
             unsigned long y = (point->y * 65535) / vids_height * (float)(screen_height / vids_heigth );
                                                                                          ^~~~~~~~~~~
./src/display.c:299:90: note: each undeclared identifier is reported only once for each function it appears in
./src/display.c:301:52: warning: passing argument 4 of 'mouse_event' makes integer from pointer without a cast [-Wint-conversion]
             mouse_event(flags, (DWORD)x, (DWORD)y, NULL, 0);
                                                    ^~~~
In file included from c:\program files\git\mingw32\include\windows.h:48:0,
                 from ./include/base.h:16,
                 from ./src/display.c:4:
c:\program files\git\mingw32\include\winuser.h:4063:24: note: expected 'DWORD {aka long unsigned int}' but argument is of type 'void *'
 WINUSERAPI void WINAPI mouse_event (DWORD, DWORD, DWORD, DWORD, ULONG_PTR);
                        ^~~~~~~~~~~
./src/display.c: In function 'create_control':
./src/display.c:318:2: warning: implicit declaration of function 'start_control' [-Wimplicit-function-declaration]
  start_control(control_display);
  ^~~~~~~~~~~~~
./src/display.c: In function 'destroy_control':
./src/display.c:326:2: warning: implicit declaration of function 'stop_control' [-Wimplicit-function-declaration]
  stop_control(control_display);
  ^~~~~~~~~~~~
./src/display.c: At top level:
./src/display.c:330:6: warning: conflicting types for 'switch_mode'
 void switch_mode(int id)
      ^~~~~~~~~~~
./src/display.c:201:6: note: previous implicit declaration of 'switch_mode' was here
      switch_mode(0);
      ^~~~~~~~~~~
./src/display.c: In function 'switch_mode':
./src/display.c:335:3: warning: implicit declaration of function 'pause_all_vids' [-Wimplicit-function-declaration]
   pause_all_vids();
   ^~~~~~~~~~~~~~
./src/display.c:343:3: warning: implicit declaration of function 'revert_all_vids' [-Wimplicit-function-declaration]
   revert_all_vids();
   ^~~~~~~~~~~~~~~
make: *** [display.o] Error 1
